Fix alignment of sampleText with title

--- a/app/resources/css/repertorium.css
+++ b/app/resources/css/repertorium.css
@@ -249,7 +249,7 @@ th {
 }
 #msDescContents div.text > div.samples,
 #titlesWrapper div.text > div.samples {
-  padding-left: 2em;
+  padding-left: 2.2em;
   margin-top: 0;
   margin-bottom: 0;
 }
